--- a/trialsite/trialapp/templates/trialapp/index.html
+++ b/trialsite/trialapp/templates/trialapp/index.html
@@ -35,6 +35,12 @@
             <span>Investigator Signup</span>
           </a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="forgot/">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Forgot</span>
+          </a>
+        </li>
       </ul>
 
       <div id="content-wrapper">
