--- a/trialsite/trialapp/templates/trialapp/trials.html
+++ b/trialsite/trialapp/templates/trialapp/trials.html
@@ -16,7 +16,7 @@
 	                    <tr>
 	                    	<td>{{r.id}}</td>
 							<td>{{r.title}}</td>
-							<td>{{r.discription}}</td>
+							<td>{{r.discription|safe}}</td>
 							<td>{{r.address}}</td>
 							<td>{{r.city}}</td>
 							<td>{{r.country}}</td>
