--- a/trialsite/trialapp/templates/trialapp/base.html
+++ b/trialsite/trialapp/templates/trialapp/base.html
@@ -35,6 +35,9 @@
           <!-- Custom styles for this template-->
           <link href={% static 'css/sb-admin.css' %} rel="stylesheet">
 
+          {{ form.media }}
+          {{ form.media.css }}
+
     </head>
 
     <body id="page-top">
@@ -100,7 +103,9 @@
 
     </nav>
 
-      {% block content %}{% endblock content %}
+      {% block content %}
+
+    {% endblock content %}
           <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fas fa-angle-up"></i>
@@ -143,5 +148,6 @@
       <!-- Demo scripts for this page-->
       <!-- <script src={% static 'js/demo/datatables-demo.js' %}></script> -->
       <script src={% static 'js/demo/chart-area-demo.js'%}></script>
+      <!--{{ form.media.js }}-->
     </body>
 </html>
