--- a/trialsite/trialapp/templates/trialapp/investigator_dashboard.html
+++ b/trialsite/trialapp/templates/trialapp/investigator_dashboard.html
@@ -51,6 +51,26 @@
             <a class="dropdown-item" href="{% url 'trialapp:enrollment' %}">Show Enrollments</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Import</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <a class="dropdown-item" href="{% url 'trialapp:import' %}">Import</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Download</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <a class="dropdown-item" href="{% url 'trialapp:download_trialheader' %}">download Trial Header</a>
+            <a class="dropdown-item" href="{% url 'trialapp:download_trials' %}">download Trials</a>
+          </div>
+        </li>
+
       </ul>
 
       <div id="content-wrapper">
