send_mail function added

--- a/trialsite/trialapp/templates/trialapp/base.html
+++ b/trialsite/trialapp/templates/trialapp/base.html
@@ -82,7 +82,7 @@
             <span class="badge badge-danger">7</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
-            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="{% url 'trialapp:send_mail' %}">Send Mail</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
