--- a/trialsite/trialapp/templates/trialapp/forgot.html
+++ b/trialsite/trialapp/templates/trialapp/forgot.html
@@ -3,10 +3,32 @@
 {% block content %}
     <form method="POST">
             {% csrf_token %}
+         {% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}{{field.name}}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+{% endif %}
             <div class="form-group">
               <label>Email</label>
               <div class="form-label-group">
                 {{ form.email}}
+              </div>
+            </div>
+        <div class="form-group">
+              <label>Password</label>
+              <div class="form-label-group">
+                {{ form.password1}}
+              </div>
+            </div>
+        <div class="form-group">
+              <label>Password</label>
+              <div class="form-label-group">
+                {{ form.password2}}
               </div>
             </div>
             <input type="submit" class="btn btn-success mt-3" name="submit">
