--- a/trialsite/trialapp/templates/trialapp/index.html
+++ b/trialsite/trialapp/templates/trialapp/index.html
@@ -38,7 +38,13 @@
         <li class="nav-item active">
           <a class="nav-link" href="forgot/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Forgot</span>
+            <span>Forgot password</span>
+          </a>
+        </li>
+          <li class="nav-item active">
+          <a class="nav-link" href="email/">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Email</span>
           </a>
         </li>
       </ul>
