--- a/trialsite/trialapp/templates/trialapp/reset.html
+++ b/trialsite/trialapp/templates/trialapp/reset.html
@@ -1,6 +1,29 @@
-{% extends 'base.html' %}
+{% extends 'trialapp/base.html' %}
 
 {% block content %}
+    <form method="POST">
+            {% csrf_token %}
 
+        <div class="form-group">
+              <label>Email</label>
+              <div class="form-label-group">
+                <input type="email" value="{{uemail}}" name="email ">
+              </div>
+            </div>
+            <div class="form-group">
+              <label>Password</label>
+              <div class="form-label-group">
+                {{ form.password1}}
+              </div>
+            </div>
+        <div class="form-group">
+              <label>Confirm Password</label>
+              <div class="form-label-group">
+                {{ form.password2}}
+              </div>
+            </div>
+            <input type="submit" class="btn btn-success mt-3" name="submit">
+            <input type="reset" class="btn btn-primary mt-3" name="reset">
+    </form>
 
 {% endblock content %}
