--- a/trialsite/trialapp/templates/trialapp/addtrials.html
+++ b/trialsite/trialapp/templates/trialapp/addtrials.html
@@ -5,42 +5,29 @@
 <div class="container">
  <form method="POST">
      {%csrf_token%}
-	 {% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}{{field.name}}</strong>
-            </div>
-        {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}{{field.name}}</strong>
-        </div>
-    {% endfor %}
-{% endif %}
      	<label>Organiser</label>
 		<input class="form-control" disabled type="text" name="organiser" value={{user}}>
-		<label>Operator</label>
-	 	{{form.operator}}
-	 <!--<label>Operators</label>-->
-	 	<!--{{form.operators}}-->
-		<label>Title</label>
-		{{form.title}}
-		<label>Address</label>		
-		{{form.address}}
-		<label>City</label>
-		{{form.city}}
-		<label>Country</label>
-		{{form.country}}
-		<label>Pincode</label>
-		{{form.pincode}}
-		<label>Discription</label>
-		{{form.discription}}
-		<label>Email</label>
-		{{form.email}}
-		
-		
+		<!--<label>Operator</label>-->
+	 	<!--{{form.operator}}-->
+	 <!--&lt;!&ndash;<label>Operators</label>&ndash;&gt;-->
+	 	<!--&lt;!&ndash;{{form.operators}}&ndash;&gt;-->
+		<!--<label>Title</label>-->
+		<!--{{form.title}}-->
+		<!--<label>Address</label>		-->
+		<!--{{form.address}}-->
+		<!--<label>City</label>-->
+		<!--{{form.city}}-->
+		<!--<label>Country</label>-->
+		<!--{{form.country}}-->
+		<!--<label>Pincode</label>-->
+		<!--{{form.pincode}}-->
+		<!--<label>Discription</label>-->
+		<!--{{form.discription}}-->
+		<!--<label>Email</label>-->
+		<!--{{form.email}}-->
+		<!---->
+		<!---->
+	 {{form.as_p}}
      <input type="submit" class="btn bg-success btn-lg font-weight-bold mt-1" value="SUBMIT">
      <input type="reset" class="btn bg-success btn-lg font-weight-bold mt-1" value="RESET">
  </form>
