--- a/trialsite/trialapp/templates/trialapp/operators.html
+++ b/trialsite/trialapp/templates/trialapp/operators.html
@@ -10,15 +10,15 @@
                   </tfoot>
                   <tbody>
                   <tbody>
-                  	{% for r in rows %}
+                  	{% for operator in object_list %}
 	                    <tr>
-							<td>{{r.username}}</td>
+							<td>{{operator.username}}</td>
 							
-							<td>{{r.first_name}}</td>
-							<td>{{r.last_name}}</td>
-							<td>{{r.email}}</td>
+							<td>{{operator.first_name}}</td>
+							<td>{{operator.last_name}}</td>
+							<td>{{operator.email}}</td>
 							
-							<td><a class="btn btn-primary " href="edit/{{r.id}}">Edit</a> <a class="btn btn-danger" href="delete/{{r.id}}">Delete</a></td>
+							<td><a class="btn btn-primary " href="edit/{{operator.id}}">Edit</a> <a class="btn btn-danger" href="delete/{{operator.id}}">Delete</a></td>
 	                    </tr>
 	                    {% endfor %}
                   </tbody>
