--- a/trialsite/trialapp/templates/trialapp/patient_trials.html
+++ b/trialsite/trialapp/templates/trialapp/patient_trials.html
@@ -12,11 +12,11 @@
                   </tfoot>
                   <tbody>
                   <tbody>
-                  	{% for r in rows %}
+                  	{% for r in object_list %}
 	                    <tr>
 	                    	<td>{{r.id}}</td>
 							<td>{{r.title}}</td>
-							<td>{{r.discription}}</td>
+							<td>{{r.discription|safe}}</td>
 							<td>{{r.address}}</td>
 							<td>{{r.city}}</td>
 							<td>{{r.country}}</td>
