--- a/trialsite/trialapp/templates/trialapp/trials.html
+++ b/trialsite/trialapp/templates/trialapp/trials.html
@@ -12,7 +12,7 @@
                   </tfoot>
                   <tbody>
                   <tbody>
-                  	{% for r in rows %}
+                  	{% for r in object_list %}
 	                    <tr>
 	                    	<td>{{r.id}}</td>
 							<td>{{r.title}}</td>
