--- a/trialsite/trialapp/templates/trialapp/index.html
+++ b/trialsite/trialapp/templates/trialapp/index.html
@@ -23,6 +23,18 @@
             <span>Sign Up</span>
           </a>
         </li>
+          <li class="nav-item active">
+          <a class="nav-link" href="ajaxsignup/">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Ajax Sign Up</span>
+          </a>
+        </li>
+          <li class="nav-item active">
+          <a class="nav-link" href="ajaxtrials/">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Ajax trials</span>
+          </a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="patienttrials/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
