--- a/trialsite/trialapp/templates/trialapp/base.html
+++ b/trialsite/trialapp/templates/trialapp/base.html
@@ -3,6 +3,18 @@
 <html>
     <head>
         <title>Trials App</title>
+      <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -148,6 +160,9 @@
       <!-- Demo scripts for this page-->
       <!-- <script src={% static 'js/demo/datatables-demo.js' %}></script> -->
       <script src={% static 'js/demo/chart-area-demo.js'%}></script>
+            <script type="text/javascript" src="js/materialize.min.js"></script>
+
       <!--{{ form.media.js }}-->
+
     </body>
 </html>
