--- a/trialsite/trialapp/templates/trialapp/patient_enrolls.html
+++ b/trialsite/trialapp/templates/trialapp/patient_enrolls.html
@@ -2,16 +2,10 @@
 
 {% block content %}
 
-  <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 90%;margin-left: auto;margin-right: auto;">
+  <table class="responsive-table highlight" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 90%;margin-left: auto;margin-right: auto;">
                   <thead>
-                    <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 163px;">Patient Username</th><th class="sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 163px;">Patient Email</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 254px;">Trial Title</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 254px;">Trial Operator</th></tr>
+                    <tr><th>Patient Username</th><th>Patient Email</th><th>Trial Title</th><th>Trial Operator</th></tr>
                   </thead>
-                  <tfoot>
-                    <tr><th rowspan="1" colspan="1">Patient Username</th><th rowspan="1" colspan="1">Patient Email</th><th rowspan="1" colspan="1">Trial Title</th>
-                      <th rowspan="1" colspan="1">Trial Operator</th>
-                    </tr>
-                  </tfoot>
-                  <tbody>
                   <tbody>
                     {% for enroll in enrollments %}
                       <tr>
